# halo2-lib

./: .gitignore  Cargo.toml  benchmark  benchmarkWithoutGPU  msm_timing_19.txt  msm_timing_20.txt
.github/workflows/: ci.yml
aggregation/: .rustfmt.toml  Cargo.toml  README.md
aggregation/src/: circuit.rs  lib.rs  native.rs  proof.rs  recursion.rs
aggregation/src/circuit/: batch_verifier.rs  hashing.rs  mod.rs
aggregation/src/tests/: circuit.config  component.rs  mod.rs  proof1.json  proof2.json  proof3.json  recursion.rs  sample_proof.rs  test_circuit.rs  test_native.rs  vk.json
aggregation/src/tests/configs/: fp_mul.config  hashing.config  inner_circuit.config  multi_pairing.config  outer_circuit.config  pairing_check.config  scalar_powers.config  scale_pairs.config
halo2-base/: Cargo.toml
halo2-ecc/: Cargo.toml
halo2-ecc/benches/: fp_mul.rs
halo2-ecc/src/bn254/: pairing.rs
halo2-ecc/src/bn254/tests/: ec_add.rs  msm.rs  pairing.rs
hashes/poseidon/: Cargo.toml
hashes/poseidon/src/: lib.rs
hashes/zkevm-keccak/: Cargo.toml
hashes/zkevm-keccak/src/: keccak_packed_multi.rs
hashes/zkevm-keccak/src/keccak_packed_multi/: tests.rs
profileRecord/: +GPU-MSM  +GPU-MSM-FFT  cpuOnly
