[package]
name = "aggregation"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { path = "../halo2-base", default-features = false }
halo2-ecc = { version = "0.3.0", path = "../halo2-ecc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
