[package]
name = "aggregation"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { path = "../halo2-base", default-features = false }
halo2-ecc = { version = "0.3.0", path = "../halo2-ecc" }
poseidon = { version = "0.1.0", path = "../hashes/poseidon" }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snark-verifier-sdk = {git = "https://github.com/axiom-crypto/snark-verifier"}

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }

[features]
# Warnings as errors
strict = []
